# Grocket

./: .gitignore  README.md  index.html
backend/: pyproject.toml  requirements.txt
backend/Grocket/: Dockerfile  manage.py  requirements.txt
backend/Grocket/Grocket/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/Grocket/api/: fields.py  filters.py  mixins.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
backend/Grocket/comments/: admin.py  models.py  services.py  translation.py
backend/Grocket/core/: models.py  services.py  views.py
backend/Grocket/csv/: categories.csv  promotions.csv  users.csv
backend/Grocket/images/: services.py  test.py
backend/Grocket/products/: admin.py  fields.py  models.py  selectors.py  services.py  translation.py  utils.py
backend/Grocket/users/: admin.py  models.py  services.py
backend/grocket/: Dockerfile  category_translate.py  manage.py  requirements.txt  translated_categories.json
backend/grocket/api/: mixins.py  urls.py
backend/grocket/comments/: admin.py  models.py  selectors.py  translation.py
backend/grocket/core/: exchange.py
backend/grocket/data/: add.sh
backend/grocket/exchange/: services.py
backend/grocket/grocket/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/grocket/images/: services.py
backend/grocket/messenger/: admin.py  apps.py  base_services.py  chat_services.py  consumers.py  message_services.py  mixins.py  models.py  notifications.py  routing.py  selectors.py  serializers.py  services.py  urls.py  (+1 more)
backend/image_creating/: image.py  main.py
(+423 files in other folders)
